[tool.poetry]
name = "kapak"
version = "3.1.0"
description = "A simple-to-use file encryption script"
authors = ["Amis Shokoohi <amisshokoohi@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/amis-shokoohi/kapak"
repository = "https://github.com/amis-shokoohi/kapak"
keywords = [
    "encryption",
    "file encryption",
    "aes",
    "aes encryption",
    "encryption script",
    "encrypt file",
    "encrypt folder"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^36.0.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.930"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-unordered = "^0.4.1"

[tool.poetry.scripts]
kapak = 'kapak.cli.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
