[tool.poetry]
name = "kapak"
version = "4.0.0"
description = "A simple-to-use file encryption script"
authors = ["Amis Shokoohi <amisshokoohi@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/amis-shokoohi/kapak"
repository = "https://github.com/amis-shokoohi/kapak"
keywords = [
    "encryption",
    "file encryption",
    "encrypt file",
    "aes",
    "aes encryption",
    "encryption script"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^39.0.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
mypy = "^0.991"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
kapak = 'kapak.cli.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
packages = ["kapak", "tests"]
python_version = 3.7
disallow_untyped_defs = true
disallow_incomplete_defs = true
implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
allow_untyped_globals = false
allow_redefinition = false
