[tool.poetry]
name = "kapak"
version = "4.0.0"
description = "A simple-to-use file encryption script"
authors = ["Amis Shokoohi <amisshokoohi@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/amis-shokoohi/kapak"
repository = "https://github.com/amis-shokoohi/kapak"
keywords = [
    "encryption",
    "file encryption",
    "encrypt file",
    "aes",
    "aes encryption",
    "encryption script"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^46.0.3"

[tool.poetry.dev-dependencies]
black = "^25.12.0"
flake8 = "^7.3.0"
mypy = "^1.19.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
kapak = 'kapak.cli.__main__:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
packages = ["kapak", "tests"]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
allow_untyped_globals = false
allow_redefinition = false
